--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -14,16 +14,13 @@
     </div>
     <article>
       <section appScrollSlide>
-        <h3>About Me</h3>
+        <h3>What Can I do?</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+			Passionate UI/UX developer, with a proven history of scalable, intuitive,
+			accessible, front ends on an organizational level. I've built and maintained a set of libraries and build
+			tools which are deployed on 25+ production applications.
+		</p>
+		<p>On a smaller scale, I love developing full-stack - From back to front end, and design to deployment.</p>
       </section>
       <section appScrollSlide>
         <h3>My Work</h3>
