--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -60,16 +60,18 @@ h2 {
 }
 article {
 	margin: auto;
-	max-width: 1500px;
+	width: 100%;
 	@media (min-width: 500px) {
-		margin: 0 1em;
+		width: 90%;
 	}
+	max-width: 1024px;
 }
 section {
-	padding: 2em 0 1em 0;
-    margin: 0 0 2em 0;
+	padding: .5em;
+	@media(min-width: 500px) {
+		padding: 2em;
+	}
     font-size: 1.1rem;
-    padding: 1.2em;
     background: rgba(0,0,0,.4);
 }
 h3 {
