--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -68,8 +68,10 @@ article {
 }
 section {
 	padding: .5em;
+	margin-bottom: 1em;
 	@media(min-width: 500px) {
 		padding: 2em;
+		margin-bottom: 2em;
 	}
     font-size: 1.1rem;
     background: rgba(0,0,0,.4);
