adding blog section

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -28,7 +28,7 @@
       </section>
       <section appScrollSlide>
         <h3>About Me</h3>
-        <p>I'm a cool guy</p>
+        <p>Outside of </p>
       </section>
       <section appScrollSlide>
         <h3>Projects</h3>
