--- a/src/app/blog/flash-focus/flash-focus.component.html
+++ b/src/app/blog/flash-focus/flash-focus.component.html
@@ -1,8 +1,11 @@
 <article class="blog-container">
-	<h1 class="blog-title">Flash Focus: Building a Full Stack CRUD Application</h1>
-	<h2 class="blog-subtitle"></h2>
+	<h1>Flash Focus</h1>
+	<h2>Building a Full Stack CRUD Application</h2>
 	<img class="blog-main-img" src="assets/flash-focus-login.png" alt="">
-	<section class="blog-body">
+	<section>
+		<p>It turns out that all you really need to make a full CRUD application is JavaScript. NodeJS is so ubiquitous that if you do any UI work, you'll have your environment already set up. But Node is useful for more than serving your local React project, obviously. Express makes it easy to set up a server.  So, if you're a front end developer, there's no reason not to dip your toes into the world server development as well.</p>
+		<p>It turns out that all you really need to make a full CRUD application is JavaScript. NodeJS is so ubiquitous that if you do any UI work, you'll have your environment already set up. But Node is useful for more than serving your local React project, obviously. Express makes it easy to set up a server.  So, if you're a front end developer, there's no reason not to dip your toes into the world server development as well.</p>
+		<p>It turns out that all you really need to make a full CRUD application is JavaScript. NodeJS is so ubiquitous that if you do any UI work, you'll have your environment already set up. But Node is useful for more than serving your local React project, obviously. Express makes it easy to set up a server.  So, if you're a front end developer, there's no reason not to dip your toes into the world server development as well.</p>
 		<p>It turns out that all you really need to make a full CRUD application is JavaScript. NodeJS is so ubiquitous that if you do any UI work, you'll have your environment already set up. But Node is useful for more than serving your local React project, obviously. Express makes it easy to set up a server.  So, if you're a front end developer, there's no reason not to dip your toes into the world server development as well.</p>
 	</section>
 </article>
