--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,33 +56,33 @@ body {
 		width: 90%;
 	}
 	color: rgba(41,41,41,1);
-}
+	h1,h2 {
+		text-align: center;
+		font-family: 'Playfair Display', sans-serif;
+		font-weight: 500;
+	}
+	h1 {
+		margin-top: 1rem;
+		font-size: 2.2rem;
+	}
+	h2 {
+		margin-bottom: 1rem;
+		font-size: 1.75rem;
+	}
 
-.blog-title {
-	text-align: center;
-	font-family: 'Playfair Display', sans-serif;
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-	font-weight: 500;
-    font-size: 2.2rem;
-}
+	.blog-main-img {
+		width: 100%;
+	}
 
-.blog-subtitle {
-	text-align: center;
-}
-
-.blog-main-img {
-	width: 100%;
-}
-
-.blog-body {
-	margin-top: 2rem;
-	font-family: 'Merriweather', serif;
-	&::first-letter {
-		color: #0e5d23;
-		line-height: 3.1rem;
-		font-size: 3em;
-		margin-right: .5rem;
-		float: left;
+	section {
+		margin-top: 2rem;
+		font-family: 'Merriweather', serif;
+		&::first-letter {
+			color: #0e5d23;
+			line-height: 3.1rem;
+			font-size: 3em;
+			margin-right: .5rem;
+			float: left;
+		}
 	}
 }
