adding some blog stuff

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,55 +1,16 @@
 .toolbar {
-	box-shadow: 0 0 7px rgba(0,0,0,.8);
-	padding: .75rem;
+	box-shadow: 0 0 8px rgba(0,0,0,.8);
+	padding: .5rem 1rem;
     background: #fafaf5;
 	position: sticky;
-	transition: 300ms ease-in-out;
-    top: -8rem;
+	transition: 500ms ease-in-out;
+    top: -4rem;
 	&.sticky {
 		top: 0;
 	}
-}
-ul.socials {
-	position: fixed;
-	bottom: 0;
-	padding: 1.2rem 1.2rem;
-	list-style-type: none;
-	font-size: 1.25rem;
-	li {
-		margin-top: .3em;
-		transition: 200ms ease-in;
-		&:hover {
-			transform: translateY(-.15em);
-			color: green;
-			img {
-				filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(180deg) brightness(80%) contrast(90%);
-			}
-		}
-		img {
-			width: 1em;
-		}
-	}
-}
-
-div.socials-bottom {
-	display: flex;
-	width: fit-content;
-	margin: auto;
-	padding: 1.4em;
-	font-size: 1.25rem;
-	span {
-		margin: .35em;
-		margin-top: .3em;
-		transition: 200ms ease-in;
-		&:hover {
-			transform: translateY(-.15em);
-			color: green;
-			img {
-				filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(180deg) brightness(80%) contrast(90%);
-			}
-		}
-		img {
-			width: 1em;
-		}
+	h2 {
+		cursor: pointer;
+		font-family: Merriweather, serif;
+		font-weight: 100;
 	}
 }
