--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -43,5 +43,12 @@
         </p>
       </section>
     </article>
+<app-contact-points baseColor="
+	invert(48%) sepia(79%) saturate(0%) hue-rotate(180deg) brightness(1000%) contrast(100%)
+	"
+					hoverColor="
+	invert(48%) sepia(79%) saturate(500%) hue-rotate(180deg) brightness(100%) contrast(100%)
+	"
+	></app-contact-points>
   </div>
 </div>
