--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -4,65 +4,18 @@
 	}"
 	>
 	<ng-container *ngIf="((windowService.screenType$ | async) || -1) > 0; else smallMenu">
-		Zachary Scott
+		<h2 routerLink="/">Zachary Scott</h2>
 	</ng-container>
 	<ng-template #smallMenu>
-		Zachary Scott
+		<h2>Zachary Scott</h2>
 	</ng-template>
 </div>
-<ul *ngIf="((windowService.screenType$ | async) || -1) > 1" class="socials">
-  <li>
-    <a
-      target="_blank"
-      href="https://github.com/zacharydscott"
-      aria-label="GitHub link"
-    >
-      <img src="assets/icons/octocat.svg" />
-    </a>
-  </li>
-  <li>
-    <a href="https://www.linkedin.com/in/zachary-scott-5b6897125/">
-      <img src="assets/icons/linkedin.svg" />
-    </a>
-  </li>
-  <li>
-    <a href="mailto:zachary.douglas.scott@gmail.com">
-      <img src="assets/icons/email.svg" />
-    </a>
-  </li>
-  <li>
-    <a href="">
-      <img src="assets/icons/resume.svg" />
-    </a>
-  </li>
-</ul>
+
 <router-outlet> </router-outlet>
-<div
-  *ngIf="((windowService.screenType$ | async) || -1) < 2"
-  class="socials-bottom"
->
-  <span>
-    <a
-      target="_blank"
-      href="https://github.com/zacharydscott"
-      aria-label="GitHub link"
-    >
-      <img src="assets/icons/octocat.svg" />
-    </a>
-  </span>
-  <span>
-    <a href="https://www.linkedin.com/in/zachary-scott-5b6897125/">
-      <img src="assets/icons/linkedin.svg" />
-    </a>
-  </span>
-  <span>
-    <a href="mailto:zachary.douglas.scott@gmail.com">
-      <img src="assets/icons/email.svg" />
-    </a>
-  </span>
-  <span>
-    <a href="">
-      <img src="assets/icons/resume.svg" />
-    </a>
-  </span>
-</div>
+<app-contact-points baseColor="
+	invert(48%) sepia(79%) saturate(0%) hue-rotate(180deg) brightness(3%) contrast(100%)
+	"
+					hoverColor="
+	invert(48%) sepia(79%) saturate(500%) hue-rotate(180deg) brightness(100%) contrast(100%)
+	"
+	></app-contact-points>
