--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,10 +50,15 @@ body {
 
 .blog-container {
 	margin: auto;
-	max-width: 700px;
-	width: 95%;
+	max-width: 800px;
+	background-color: #fffcf7;
+	border: 4px solid #fffdf9;
+	width: 100%;
+	padding: 0 1.2% 1em 1.2%;
+	margin-bottom: 0;
 	@media (min-width: 500px) {
 		width: 90%;
+		padding: 0 50px 2em 50px;
 	}
 	color: rgba(41,41,41,1);
 	h1,h2 {
@@ -62,7 +67,8 @@ body {
 		font-weight: 500;
 	}
 	h1 {
-		margin-top: 1rem;
+		padding-top: 1rem;
+		margin-top: 0;
 		font-size: 2.2rem;
 	}
 	h2 {
@@ -79,10 +85,29 @@ body {
 		font-family: 'Merriweather', serif;
 		&::first-letter {
 			color: #0e5d23;
-			line-height: 3.1rem;
-			font-size: 3em;
-			margin-right: .5rem;
+			line-height: 1em;
+			margin-top: .05em;
+			font-size: 2.55em;
+			margin-right: .1em;
 			float: left;
+		}
+	}
+	p {
+		line-height: 1.4;
+		margin-bottom: 1.1em;
+		code {
+			font-family: Roboto;
+			background: #ebebe7;
+			border-radius: .3rem;
+			padding: 0 .3em;
+		}
+	}
+	pre {
+		background: #ebebe7;
+		padding: 1rem; 
+		font-family: Roboto;
+		border-radius: .3rem;
+		code {
 		}
 	}
 }
