--- a/src/app/blog/flash-focus/flash-focus.component.html
+++ b/src/app/blog/flash-focus/flash-focus.component.html
@@ -15,7 +15,7 @@
       found <a href="https://github.com/zacharydscott/flasher">here</a>.
     </p>
     <p>
-      So, why this stack? Well Angular is always a great choice for a larger app
+      So, why this stack? Angular is always a great choice for a larger app
       with more than a few pages and needs the option to scale. Of course React
       would be a great choice to. So would Svelte, Vue, or even SolidJs - go
       check that one out - would be a great choice. It all comes down to what
