--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@
 }
 body {
 	margin: 0;
-	font-size: 20px;
+	// font-size: 20px;
 }
 .absolute {
 	position: absolute;
@@ -53,13 +53,13 @@ body {
 	margin: auto;
 	max-width: 800px;
 	background-color: #fffcf7;
-	border: 4px solid #fffdf9;
 	width: 100%;
-	padding: 0 1.2% 1em 1.2%;
+	padding: 0 5% 1em 5%;
 	margin-bottom: 0;
 	@media (min-width: 500px) {
 		width: 90%;
 		padding: 0 50px 2em 50px;
+		border: 4px solid #fffdf9;
 	}
 	color: rgba(41,41,41,1);
 	h1,h2 {
@@ -84,30 +84,30 @@ body {
 	section {
 		margin-top: 2rem;
 		font-family: 'Merriweather', serif;
-		&::first-letter {
-			color: #0e5d23;
-			line-height: 1em;
-			margin-top: .05em;
-			font-size: 2.55em;
-			margin-right: .1em;
-			float: left;
-		}
+		// &::first-letter {
+		// 	color: #0e5d23;
+		// 	line-height: 1em;
+		// 	margin-top: .05em;
+		// 	font-size: 2.75em;
+		// 	margin-right: .1em;
+		// 	float: left;
+		// }
 	}
 	p {
-		line-height: 1.4;
-		margin-bottom: 1.1em;
+		font-family: Roboto;
+		line-height: 1.7;
+		margin-bottom: 1.5em;
 		code {
-			font-family: Roboto;
 			background: #ebebe7;
 			border-radius: .3rem;
 			padding: 0 .3em;
 		}
 	}
 	pre {
+		font-family: Roboto;
 		white-space: pre-wrap;
 		background: #ebebe7;
 		padding: 1rem; 
-		font-family: Roboto;
 		border-radius: .3rem;
 		code {
 		}
