--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,7 +1,10 @@
+.blog {
+    background: #fffdfa;
+}
 .toolbar {
 	width: 100%;
+    background: #fffdfa;
 	box-shadow: 0 0 8px rgba(0,0,0,.8);
-    background: #fafaf5;
 	position: sticky;
 	transition: 500ms ease-in-out;
     top: -4rem;
