--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,14 +52,10 @@ body {
 .blog-container {
 	margin: auto;
 	max-width: 800px;
-	background-color: #fffcf7;
-	width: 100%;
-	padding: 0 5% 1em 5%;
+	// background-color: #fffcf7;
+	width: 90%;
 	margin-bottom: 0;
 	@media (min-width: 500px) {
-		width: 90%;
-		padding: 0 50px 2em 50px;
-		border: 4px solid #fffdf9;
 	}
 	color: rgba(41,41,41,1);
 	h1,h2 {
