color and padding

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,9 +1,10 @@
 .blog {
-    background: #fffdfa;
+    background: #fffcf9;
+	padding-bottom: 2.5rem;
 }
 .toolbar {
 	width: 100%;
-    background: #fffdfa;
+    background: #fffbf8;
 	box-shadow: 0 0 8px rgba(0,0,0,.8);
 	position: sticky;
 	transition: 500ms ease-in-out;
