--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,6 +32,16 @@
       </section>
       <section appScrollSlide>
         <h3>Projects</h3>
+        <h4 class="h-link" routerLink="../go-fish">Go Fish</h4>
+        <p>
+          An implementation of poker planning using websockets via socket.io.
+          I started to wonder why many applications for this task actually
+          cost money, as this seems like a fairly simple program to put together.
+          Besides, I wanted to dip my toes into web sockets, and this was and
+          this was as good an excuse as any. You can find the <a href="">front-end code here</a>
+          (tied to this site), the server-side <a href="todo">here</a>, and
+          <a href="">a post explaining it here</a>.
+        </p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
