--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -79,8 +79,17 @@ section {
     background: rgba(0,0,0,.4);
 }
 h3 {
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-family: Pixel, monospace;
+	@media (max-width: 1500px) {
+		margin: auto;
+		text-align: center;
+	}
+}
+h4 {
+	font-size: 1.75rem;
+	font-family: Pixel, monospace;
+  width: fit-content;
 	@media (max-width: 1500px) {
 		margin: auto;
 		text-align: center;
@@ -93,6 +102,10 @@ p {
 	@media (min-width: 1200px) {
 		font-size: 1.75rem;
 	}
+}
+
+.h-link:hover {
+   color: var(--link)
 }
 
 @keyframes glow {
